

        Hauler:

            - Spawns units if more than 2 containers.
            - Units now only withdraw energy from source containers.
            - Units now deliver to spawn containers.
            - Units will try and deliver to stationary builders/upgraders/workers until a storage is present.

        Hub: 

            - Unit now loads and unloads all resources to and from terminal.

        LongHauler:

            - Spawns when there is a dismantle mission and target structures have reachable store stock.
            - Spawns factors in dropped resources.
 
        Remote builder:

            - Units no longer clear assigned room when finished building. 
                Units focus on upgrading controller if no construction tasks available.

        Remote hauler:

            - Units now deliver to spawn containers.
            - Units will try and deliver to stationary builders/upgraders/workers until a storage is present.
            - Units now find more direct path between rooms.

        Reserver:

            - Unit now attacks enemy owned controllers

        Scout:

            - Uses a cheaper algorithm to find next room to move to. Added some randomization to help break out of equal lastScanTimes.

        Defender:

            - Creep now uses ranged attack or heal when no healthy attack parts
            - Now attacks hostile structures.

    MANAGE CREEPS:

        - Withdraw tasks now require there to be at least some of the resource in the withdraw target store.         
        - Adjusted some parameters on withdraw and pickup tasks.
        - Seperated withdraw and pickup task finder by if or if not the task should fill the creeps inventory.
        - Made imporvements on haulers and remote haulers by allowing them to refill parked builders, upgraders, and fillers
        - Fixed some bugs. Set up dedicated dismantler
        - Fixed deliver tasks bug causing creeps to get stuck.

    PATHFINDING:
