@@ -1,16 +1,10 @@
-storage.db['rooms.objects'].update({ _id: '9d370775041376a' },{ $set: { level: 5 }})
+storage.db['rooms.objects'].update({ _id: '0f430773646b814' },{ $set: { level: 8 }})
 storage.db['users'].update({"username": "RemarkablyAverage"}, {$set: {gcl: 80000000}})
 
 Spawning:
 
-    [x] Slow down upgraders while there are structures to build.
-
 
 Room Planner:
-
-    [x] Fix roads leading from ramparts. Sometimes, they place outside of rampart walls. It would be best if they did not go through rampart walls at all.
-    
-    [x] Use structureType priorities for construction site placement.
 
     [] Outpost roads sometimes not placing correctly. (going into thin wall on edge of room)
 
@@ -27,10 +21,9 @@ Room Planner:
 
 Pathfinding:
 
-    [x] Creeps can/should path all the way to destinations, including in other rooms.
-    [x] Initial cost matrix does not looks for creeps, enemy or otherwise.
-    [x] Some units bounce in and out when transitioning between rooms.
-    [x] Better classification of what rooms are safe to travel through to prevent erratic paths avoiding safe rooms (one hostile structure that is not a tower, etc.)
+    [] Keep track of how many ticks a creep stayed at the same spot. 
+        - If not fatigued +1 to ticks at a spot
+        - If +4, re-path
 
     getPath: (for creeps)
        
@@ -48,9 +41,10 @@ Roles:
 
 
     Hub:
+
         [] Spawn this unit if there are 2 links, and one is the hub link OR if a storage and a terminal is present.
 
-        [] Fill priorities:
+        [x] Fill priorities:
 
                 [x] Energy:
                     
@@ -61,10 +55,10 @@ Roles:
                     3. then rest goes into storage.
 
 
-                [] Resources:
+                [x] Resources:
                 
-                    1. If resource in storage < 10000, move r to storage
-                    2. then fill terminal to 2k
+                    1. If resource in storage < 10000, move resources from terminal to storage
+                    2. if storage > 10k, then fill terminal to 2k keeping storage >= 10k
                     3. then rest goes into storage
 
     
@@ -109,7 +103,7 @@ Expansion Manager:
 
     [] Re-name manageMissions
 
-    Power Bank Missions:
+    [] Power Bank Missions:
 
         [] Req RCL: 8
         [] Implement mission type.
@@ -119,6 +113,10 @@ Expansion Manager:
                 [] Healer
         [] Assign long haulers as needed.
 
+    [] Resource Missions:
+
+  
+
 MEMORY:
 
     [] Track some data used by owned rooms
@@ -126,17 +124,10 @@ MEMORY:
 
 Lab Manager:
 
-    [x] Module
-    
-    [x] Tracks compounds needed from most basic to most advanced.
-
     [] Seperate compound by body part type
-
-    [x] Find central labs
 
     [] Tracks available compounds for boosting
 
-    [x] Sets up creep tasks for creeps to referance if they need work, to fill and unfill labs
 
 Manage Squads:
 
@@ -151,4 +142,32 @@ Manage Squads:
         [] Move to target room
 
         [] Handle specific mission types:
+
+
+Boosting:
+
+    [] Set up system to determine if a creep will be boosted.
+        [] Checks if can boost
+        [] Picks highest availably boost type
+
+    [] Create tasks for hauler to load/unload boost labs.
+
+    [] Add boost task unit.
+        [] Creep moves to lab.
+        [] Lab boosts while creep near until quota met.
+
+
+Market:
+
+    [] Sell commodities over x qty
+
+Factory:
+
+    [] Make higher tier commodities.
+
+    [] Condense overstocked resources
+
+Observer Module:
+
+    [x] Scans best target that needs to be scanned in range.
 
